@@ -1,6 +1,8 @@
 git-annex (10.20240732) UNRELEASED; urgency=medium
 
   * Avoid loading cluster log at startup.
+  * Remove debug output (to stderr) accidentially included in
+    last version.
 
  -- Joey Hess <id@joeyh.name>  Wed, 31 Jul 2024 15:52:03 -0400
 
